First round of edits.

--- a/book/main.tex
+++ b/book/main.tex
@@ -112,7 +112,7 @@
 %	PART 1: Introduction
 %----------------------------------------------------------------------------------------
 
-\input{Parts/Part1.tex}
+% \input{Parts/Part1.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART 2: Conservation Laws
